# event-flats-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/event_flats_bot/: __main__.py  config.py
src/event_flats_bot/admin/: __init__.py  __main__.py  settings.py
src/event_flats_bot/admin/handlers/: menu.py
src/event_flats_bot/client/: __init__.py  __main__.py  llm.py  settings.py
src/event_flats_bot/client/handlers/: chat.py
src/event_flats_bot/core/: __init__.py  backend.py  settings.py
src/event_flats_bot/handlers/: admin.py  search.py  start.py
src/event_flats_bot/keyboards/: search.py
src/event_flats_bot/services/: search.py
