[project]
name = "event-flats-bot"
version = "0.1.0"
description = "Telegram bot that serves Event Flats listings to end customers"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.13.0,<4",
    "httpx>=0.27.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
event-flats-bot = "event_flats_bot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
