[project]
name = "event-flats-bot"
version = "0.2.0"
description = "Telegram bots for Event Flats — admin WebApp launcher and customer-facing LLM chat"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.13.0,<4",
    "httpx>=0.27.0",
    "openai>=1.40.0,<2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
event-flats-admin-bot = "event_flats_bot.admin.__main__:main"
event-flats-client-bot = "event_flats_bot.client.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
